--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,8 +1,7 @@
-name = "imagesearch"
+name = "img"
 main = "data.js"
 
 compatibility_date = "2025-02-16"
 
 [observability]
 enabled = true
-head_sampling_rate = 1 # optional. default = 1.
