--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,3 +6,7 @@ compatibility_date = "2025-02-16"
 
 [observability]
 enabled = true
+
+[site]
+bucket = "./"  # Direktori tempat file WASM berada
+entry-point = "worker"  # Entry point Worker Anda
