--- a/wrangler.toml
+++ b/wrangler.toml
@@ -10,3 +10,6 @@ enabled = true
 [site]
 bucket = "./"  # Direktori tempat file WASM berada
 entry-point = "worker"  # Entry point Worker Anda
+
+[wasm_modules]
+djpeg = "./djpeg-static.wasm"
